--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -1,2 +1,29 @@
-Django>=2.2,<2.3
-wagtail>=2.7,<2.8
+beautifulsoup4==4.6.0
+certifi==2019.11.28
+chardet==3.0.4
+Django==2.2.10
+django-assets==2.0
+django-ckeditor==5.9.0
+django-cors-headers==3.2.1
+django-js-asset==1.2.2
+django-modelcluster==5.0.1
+django-taggit==1.2.0
+django-treebeard==4.3.1
+djangocodemirror==2.1.0
+djangorestframework==3.11.0
+draftjs-exporter==2.1.7
+html5lib==1.0.1
+idna==2.8
+Pillow==6.2.2
+Pygments==2.5.2
+pytz==2019.3
+requests==2.22.0
+six==1.14.0
+sqlparse==0.3.0
+Unidecode==1.1.1
+urllib3==1.25.8
+wagtail==2.7.1
+wagtailcodeblock==1.17.1.0
+webassets==2.0
+webencodings==0.5.1
+Willow==1.3
